add driver and executor extraJavaOptions